--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.3",
+    "@astrojs/react": "latest",
+    "@astrojs/tailwind": "^5.0.3",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "astro": "^4.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
   }
 }
