fix for build and deploy to vercel

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "dreary-debris",
+  "name": "astro-beginner",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --open",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
