--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "@astrojs/check": "^0.3.3",
     "@astrojs/react": "latest",
     "@astrojs/tailwind": "^5.0.3",
+    "@kahi-ui/framework": "^0.6.4",
+    "@nextui-org/react": "^2.2.9",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.0.6",
+    "canvas-confetti": "^1.9.2",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4"
   }
 }
